--- a/app/src/main/res/layout/transaction_filter_dialog.xml
+++ b/app/src/main/res/layout/transaction_filter_dialog.xml
@@ -139,13 +139,13 @@
                                 app:chipStrokeWidth="@dimen/_1sdp" />
 
                             <com.google.android.material.chip.Chip
-                                android:id="@+id/transStatusCanceled"
+                                android:id="@+id/transStatusRefunded"
                                 style="@style/Widget.MaterialComponents.Chip.Choice"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="Canceled"
+                                android:text="Refunded"
                                 android:textAlignment="center"
                                 android:textColor="@color/filter_chip_text_color"
                                 android:textSize="@dimen/_11ssp"
@@ -164,14 +164,14 @@
                             android:orientation="horizontal">
 
                             <com.google.android.material.chip.Chip
-                                android:id="@+id/transStatusInProgress"
+                                android:id="@+id/transStatusPartialRefund"
                                 style="@style/Widget.MaterialComponents.Chip.Choice"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="@dimen/_8sdp"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="In Progress"
+                                android:text="Partial Refund"
                                 android:textAlignment="center"
                                 android:textColor="@color/filter_chip_text_color"
                                 android:textSize="@dimen/_11ssp"
@@ -188,7 +188,6 @@
                                 android:layout_marginRight="@dimen/_8sdp"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="Failed"
                                 android:textAlignment="center"
                                 android:textColor="@color/filter_chip_text_color"
                                 android:textSize="@dimen/_11ssp"
