--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -23,7 +23,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/btm_radius"
+                    android:background="@drawable/bottom_radius"
                     android:orientation="vertical">
 
                     <LinearLayout
