--- a/app/src/main/res/layout/refund_preview.xml
+++ b/app/src/main/res/layout/refund_preview.xml
@@ -175,6 +175,7 @@
                 android:textSize="@dimen/_11ssp" />
 
             <ImageView
+                android:id="@+id/infoIV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -194,7 +195,46 @@
             android:textFontWeight="1"
             android:textSize="@dimen/_11ssp" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/_10sdp">
 
+        <LinearLayout
+            android:id="@+id/viewFeesTextLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/et_bg_gray"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_11sdp"
+            android:paddingEnd="@dimen/_21sdp"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/feePercentageTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginBottom="@dimen/_7sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="[0.5%] of the purchase amount is charged as a fee for this transaction."
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+
+            <TextView
+                android:id="@+id/viewFeesTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_14sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="View Fees"
+                android:textColor="@color/primary_green"
+                android:textSize="@dimen/_11ssp" />
+        </LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/lyTotal"
         android:layout_width="match_parent"
