--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -110,6 +110,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
                     android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@color/light_blue" />
 
                 <LinearLayout
@@ -161,7 +162,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="07/27/2020 10:36:14"
+                        android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
@@ -172,7 +173,8 @@
                     android:id="@+id/llSaleOrderData"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -195,7 +197,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="100.00 CYN"
+                            android:text=""
                             android:textAlignment="textEnd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -223,7 +225,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="1.00 CYN"
+                            android:text=""
                             android:textAlignment="textEnd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -251,7 +253,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="100.00 CYN"
+                            android:text=""
                             android:textAlignment="textEnd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -310,11 +312,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
-                    android:text="srm1d3hsM734h98"
+                    android:text=""
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
 
                 <ImageView
+                    android:id="@+id/saleRefIDcopyIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_6sdp"
@@ -331,6 +334,7 @@
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:fontFamily="@font/opensans_bold"
+                android:layout_marginStart="@dimen/_11sdp"
                 android:text="@string/customer_information"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
@@ -364,7 +368,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Jennifer Lopez"
+                        android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
@@ -393,7 +397,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Jlopez@gmail.com"
+                        android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
@@ -422,7 +426,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="100.00 CYN"
+                        android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
@@ -438,6 +442,7 @@
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/ledger_information"
+                android:layout_marginStart="@dimen/_11sdp"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
@@ -471,7 +476,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="12345678"
+                        android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
@@ -499,7 +504,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="[Name Here]"
+                        android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
@@ -527,7 +532,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="[Name Here]"
+                        android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
@@ -548,6 +553,7 @@
                     android:layout_marginTop="@dimen/_16sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_bold"
+                    android:layout_marginStart="@dimen/_11sdp"
                     android:text="@string/original_transaction_details"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
@@ -580,7 +586,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="07/27/2020 10:36:14"
+                            android:text=""
                             android:textAlignment="textEnd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -608,11 +614,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="srm1d3hsM734h98"
+                            android:text=""
                             android:textColor="@color/primary_green"
                             android:textSize="@dimen/_11ssp" />
 
                         <ImageView
+                            android:id="@+id/orgRefIDcopyIV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_6sdp"
@@ -643,7 +650,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="100.00 CYN"
+                            android:text=""
                             android:textAlignment="textEnd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -671,7 +678,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="1.00 CYN"
+                            android:text=""
                             android:textAlignment="textEnd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -699,7 +706,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="100.00 CYN"
+                            android:text=""
                             android:textAlignment="textEnd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -722,6 +729,7 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/activity_log"
+                    android:layout_marginStart="@dimen/_11sdp"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
 
