--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/et_bg_gray"
@@ -236,7 +237,7 @@
 
                                 <View
                                     android:layout_width="match_parent"
-                                    android:layout_height="@dimen/_1sdp"
+                                    android:layout_height="2dp"
                                     android:layout_gravity="center"
                                     android:layout_marginLeft="@dimen/_15sdp"
                                     android:layout_marginTop="@dimen/_20sdp"
