--- a/app/src/main/res/layout/refund_preview.xml
+++ b/app/src/main/res/layout/refund_preview.xml
@@ -51,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_8sdp"
         android:orientation="horizontal">
 
         <TextView
@@ -78,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_17sdp"
+        android:layout_marginTop="@dimen/_21sdp"
         android:orientation="horizontal">
 
         <TextView
@@ -193,8 +194,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="@dimen/_10sdp">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/viewFeesTextLL"
@@ -235,7 +235,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_16sdp"
         android:orientation="horizontal">
 
         <TextView
@@ -292,7 +292,7 @@
             android:fontFamily="@font/opensans_regular"
             android:layout_weight="1"
             android:gravity="end"
-            android:text="guyggjghjghgh"
+            android:text=""
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
     </LinearLayout>
