--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -295,7 +295,7 @@
 
                                         <ImageView
                                             android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
+                                            android:layout_height="@dimen/_16sdp"
                                             android:layout_marginEnd="@dimen/_5sdp"
                                             android:src="@drawable/logout_icon" />
 
