--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -211,8 +211,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingTop="@dimen/_7sdp"
-                        android:visibility="gone"
-                        android:paddingBottom="@dimen/_10sdp">
+                        android:paddingBottom="@dimen/_10sdp"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -269,28 +269,34 @@
                         android:layout_marginTop="@dimen/_1sdp"
                         android:background="@color/light_blue" />
 
-                    <ImageView
-                        android:id="@+id/ivRefund"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginBottom="@dimen/_4sdp"
-                        android:contentDescription="@string/refund"
-                        android:src="@drawable/refund" />
-
-                    <TextView
-                        android:id="@+id/RefundTV"
+                    <LinearLayout
+                        android:id="@+id/refundll"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_2sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:text="@string/refund"
-                        android:textAlignment="center"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_9ssp" />
-                </LinearLayout>
+                        android:orientation="vertical">
 
+                        <ImageView
+                            android:id="@+id/ivRefund"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginBottom="@dimen/_4sdp"
+                            android:contentDescription="@string/refund"
+                            android:src="@drawable/refund" />
+
+                        <TextView
+                            android:id="@+id/RefundTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/_2sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text="@string/refund"
+                            android:textAlignment="center"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_9ssp" />
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -305,9 +311,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:fontFamily="@font/opensans_regular"
                     android:text="@string/reference_id"
-                    android:layout_weight="1"
                     android:textColor="@color/dark_gray"
                     android:textSize="@dimen/_11ssp" />
 
@@ -321,10 +327,10 @@
                         android:id="@+id/refID"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:text=""
-                        android:gravity="end"
                         android:layout_weight="1"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:gravity="end"
+                        android:text=""
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
 
@@ -332,9 +338,9 @@
                         android:id="@+id/saleRefIDcopyIV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:contentDescription="@string/copy"
-                        android:layout_marginTop="@dimen/_2sdp"
                         android:layout_marginLeft="@dimen/_6sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:contentDescription="@string/copy"
                         android:src="@drawable/ic_content_copy"
                         app:tint="@color/primary_green" />
                 </LinearLayout>
@@ -605,19 +611,20 @@
                             android:textSize="@dimen/_11ssp" />
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         android:paddingTop="@dimen/_7sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:orientation="horizontal">
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/reference_id"
-                            android:layout_weight="1"
                             android:textColor="@color/dark_gray"
                             android:textSize="@dimen/_11ssp" />
 
@@ -631,10 +638,10 @@
                                 android:id="@+id/orgRefId"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:text=""
-                                android:gravity="end"
                                 android:layout_weight="1"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:gravity="end"
+                                android:text=""
                                 android:textColor="@color/primary_green"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -642,9 +649,9 @@
                                 android:id="@+id/orgRefIDcopyIV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:contentDescription="@string/copy"
-                                android:layout_marginTop="@dimen/_2sdp"
                                 android:layout_marginLeft="@dimen/_6sdp"
+                                android:layout_marginTop="@dimen/_2sdp"
+                                android:contentDescription="@string/copy"
                                 android:src="@drawable/ic_content_copy"
                                 app:tint="@color/primary_green" />
                         </LinearLayout>
