--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -15,7 +15,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_96sdp"
             android:background="@drawable/txn_mask_group">
 
             <ImageView
@@ -284,7 +284,8 @@
 
                             <ProgressBar
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
+                                android:layout_marginTop="@dimen/_11sdp"
+                                android:layout_height="@dimen/_35sdp" />
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -295,7 +296,7 @@
                                 android:text="Load More"
                                 android:textColor="@color/primary_green"
                                 android:textSize="@dimen/_10ssp"
-                                android:visibility="visible" />
+                                android:visibility="gone" />
 
                         </LinearLayout>
 
